# PyAudioWPatch

./: .gitignore  CHANGELOG  INSTALL.old  LICENSE.txt  Makefile  PKG-INFO  README.md  cibuildwheel_before_all.sh  cygwin_cibuildwheel_build.sh  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: unified-template.md
.github/workflows/: release-to-pypi.yml
examples/: _spinner_helper.py  pawp_another_record_wasapi_loopback.py  pawp_crossplatform_concept.py  pawp_play_sine_using_context_manger.py  pawp_record_wasapi_loopback.py  pawp_simple_recording_app.py  play_wave.py  play_wave_macosx_channelmap.py
examples/origin_examples/: play_wave.py  play_wave_callback.py  play_wave_macosx_channelmap.py  record.py  system_info.py  wire_callback.py  wire_full.py  wire_half.py
portaudio_v19/: Makefile.in  README.md  configure
sphinx/: conf.py
src/: _portaudiomodule.c  pyaudiowpatch.py
src/pyaudiowpatch/: __init__.py  __main__.py
tests/: error_tests.py  pyaudio_tests.py
