# ~For build(cygwin) via cibuildwheel:
# CIBW_SKIP="cp36*" CIBW_BUILD="cp3*" cibuildwheel --platform windows
[tool.cibuildwheel]
environment = { PAWP_C_C_FLAG="TRUE" }
before-all = "bash {project}/cibuildwheel_before_all.sh"
archs = ["auto"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

